# qvis

./: .gitignore  Cargo.toml  flake.nix
calibration_ui/: Cargo.toml
calibration_ui/src/: main.rs
git_hooks/: post-merge
qvis/: Cargo.toml
qvis/src/: inference.rs  lib.rs
qvis/src/cv/: inference.rs
qvis/src/puzzle_matching/: hungarian_algorithm.rs  mod.rs
qvis_app/: .env  Cargo.toml  Makefile.toml
qvis_app/.zed/: settings.json
qvis_app/src/: app.rs  calibration_ui.rs  lib.rs  main.rs  messages_logger.rs  pixel_assignment_ui.rs  server_fns.rs  take_picture.rs  video.rs
src/: hungarian_algorithm.rs
