[package]
name = "qvis_app"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = "0.8.15"
qvis = { path = "../qvis" }
puzzle_theory = { git = "https://github.com/qter-project/puzzle-theory", features = ["serde"] }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
log = "0.4.29"
leptos-use = "0.17.0"
wasm-bindgen = "=0.2.106"
leptos_ws = "0.9.1"
tokio = { version = "1.49.0", features = ["time"], optional = true }
leptos_axum = { version = "0.8.7", optional = true }
axum = { version = "0.8.8", features = ["macros"], optional = true }
serde = "1.0.228"

[features]
hydrate = [
    "leptos/hydrate",
    "leptos_ws/hydrate"
]
ssr = [
    "dep:tokio",
    "dep:axum",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_ws/ssr",
    "leptos-use/ssr"
]

[package.metadata.leptos]
output-name = "qvis-app"
lib-features = ["hydrate"]
bin-features = ["ssr"]
tailwind-input-file = "input.css"
