[package]
name = "qvis_app"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = "0.8.15"
qvis = { path = "../qvis" }
puzzle_theory = { git = "https://github.com/qter-project/puzzle-theory", features = ["serde"] }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
log = "0.4.29"
leptos-use = { version = "0.17.0", features = ["use_event_listener"] }
wasm-bindgen = "=0.2.106"
leptos_ws = "0.9.1"
serde = "1.0.228"
tokio = { version = "1.49.0", optional = true }
leptos_axum = { version = "0.8.7", optional = true }
axum = { version = "0.8.8", features = ["macros"], optional = true }
axum-server = { version = "0.8.0", features = ["tls-rustls"], optional = true }
web-sys = { version = "0.3.83", features = ["CanvasRenderingContext2d", "ImageData"] }
internment = { version = "0.8.6", features = ["arc"] }
rand = "0.9.2"

[dependencies.opencv]
version = "0.98.1"
default-features = false
features = ["highgui", "imgcodecs", "imgproc"]
optional = true

[features]
hydrate = [
    "leptos/hydrate",
    "leptos_ws/hydrate"
]
ssr = [
    "dep:tokio",
    "dep:axum",
    "dep:axum-server",
    "dep:leptos_axum",
    "dep:opencv",
    "leptos/ssr",
    "leptos_ws/ssr",
    "leptos-use/ssr"
]

[package.metadata.leptos]
lib-features = ["hydrate"]
bin-features = ["ssr"]
tailwind-input-file = "input.css"
site-addr = "0.0.0.0:3000"
assets-dir = "public"
